<rdar://problem/19727470> UI : Wave - M2 - Claim Review - UI is not proper when navigating between Licensor and Country tab in Claim Review -- added wordwrap and height:auto attribute for row to avoid text overlapping with other columns

--- a/components/page-claimreview/page-claimreview.less
+++ b/components/page-claimreview/page-claimreview.less
@@ -59,9 +59,12 @@ rn-claim-licensor-grid {
       border-left: 1px solid #a1a1a1;
       //border-right: 1px solid #a1a1a1;
       tr {
-        height : 22px;
+        height : auto;
+        min-height:22px;
+        word-wrap: break-word;
         td {
-          height : 22px;
+          height : auto;
+          min-height:22px;
           padding-top:1px;
         }
       }
@@ -170,9 +173,12 @@ rn-claim-country-grid {
       border-left: 1px solid #a1a1a1;
       //border-right: 1px solid #a1a1a1;
       tr {
-        height : 22px;
+        height : auto;
+        word-wrap: break-word;
+        min-height:22px;
         td {
-          height : 22px;
+          height : auto;
+          min-height:22px;
           padding-top:1px;
         }
       }
